Refactor contribution
